Adjusting material delivery see as student

--- a/material_delivery/templates/material_delivery/view.html
+++ b/material_delivery/templates/material_delivery/view.html
@@ -151,12 +151,17 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                                 <br clear="all" />
                             </div>
                         {% endif %}
+                    {% elif studentView %}
+                        <div class="text-center">
+                            <a href="#"
+                                class="btn btn-success btn-raised btn-sm"><i class="fa fa-plus-circle"></i> {% trans 'Add your material' %}</a>
+                        </div>
                     {% endif %}
 
                     <div class="row">
                         <div id="student_materials" class="col-lg-12">
                             {% if not studentDeliver or studentDeliver.material_deliver.count == 0 %}
-                                {% if has_subject_permissions %}
+                                {% if has_subject_permissions and not studentView %}
                                     <div class="text-center bg-success well-sm">
                                         <i class="fa fa-exclamation-triangle text-sm"></i>
                                         <small>{% trans "The student hasn't uploaded any material yet." %}</small>
@@ -177,7 +182,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             {% if studentDeliver.student_deliver.exists %}
                                 {% include 'material_delivery/_teacher_evaluation_view.html' with evaluation=studentDeliver.student_deliver.first deliver_pk=studentDeliver.pk user=request.user %}
                             {% else %}
-                                {% if has_subject_permissions %}
+                                {% if has_subject_permissions and not studentView %}
                                     <div id="eval_btn" class="text-center">
                                         <a href="javascript:evaluate('{% url 'material_delivery:evaluate' studentDeliver.pk %}')" class="btn btn-success btn-raised btn-sm">{% trans 'Evaluate material' %}</a>
                                     </div>
