--- a/material_delivery/templates/material_delivery/window_view.html
+++ b/material_delivery/templates/material_delivery/window_view.html
@@ -67,6 +67,12 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             margin: 0;
         }
     </style>
+
+    <script type="text/javascript">
+        let filteredData = [];
+        let arrayData = [];
+        let percentage = null;
+    </script>
 </head>
 
 <body>
