--- a/material_delivery/templates/material_delivery/_teacher_evaluation_view.html
+++ b/material_delivery/templates/material_delivery/_teacher_evaluation_view.html
@@ -23,76 +23,77 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 post-body">
             <h4 class="post-user">
                 {% if not evaluation.teacher == request.user %}
-                    {% is_online evaluation.teacher as status %}
-                
-                    <span data-toggle="popover" data-container="body" data-placement="right">
-                        {{ evaluation.teacher.fullname }} <small class="text-muted" style="margin-left:1em"><i class="fa fa-check-square-o"></i> {% trans 'Evaluated' %}</small>
-                    </span>
-                    
-                    <div class="popover">
-                        <div class="popover-content participant">
-                            <button type="button" class="close" aria-label="{% trans 'Close' %}"><span
-                                    aria-hidden="true">&times;</span></button>
-                    
-                            <br clear="all" />
-                    
-                            <div class="col-md-3 col-sm-3 col-xs-3 user-img">
-                                <img src="{{ evaluation.teacher.image_url }}" class="img-responsive" />
-                            </div>
-                            <div class="col-md-9 col-sm-9 col-xs-9 user-info">
-                                <h4><a class="status {{ status }}" data-toggle="tooltip" title="{{ status|status_text }}"></a> {{ evaluation.teacher }}</h4>
-                            </div>
+                {% is_online evaluation.teacher as status %}
+
+                <span data-toggle="popover" data-container="body" data-placement="right">
+                    {{ evaluation.teacher.fullname }} <small class="text-muted" style="margin-left:1em"><i
+                            class="fa fa-check-square-o"></i> {% trans 'Evaluated' %}</small>
+                </span>
+
+                <div class="popover">
+                    <div class="popover-content participant">
+                        <button type="button" class="close" aria-label="{% trans 'Close' %}"><span
+                                aria-hidden="true">&times;</span></button>
+
+                        <br clear="all" />
+
+                        <div class="col-md-3 col-sm-3 col-xs-3 user-img">
+                            <img src="{{ evaluation.teacher.image_url }}" class="img-responsive" />
                         </div>
-                        <div class="popover-footer">
-                            <a href="#"
-                                onclick="getModalInfo($(this), '{{ evaluation.deliver.delivery.topic.subject.id }}', 'subject'); return false;"
-                                data-url='{% url "chat:profile" evaluation.teacher.email %}'
-                                class="btn btn-default btn-raised pull-left btn-popover-mobile">
-                                {% trans 'See Profile' %}
-                            </a>
-                            <a href="#"
-                                onclick="getModalInfo($(this), '{{ evaluation.deliver.delivery.topic.subject.id }}', 'subject'); return false;"
-                                data-url='{% url "chat:talk" evaluation.teacher.email %}'
-                                class="btn btn-success btn-raised pull-right btn-popover-mobile">
-                                {% trans 'Send Message' %}
-                            </a>
+                        <div class="col-md-9 col-sm-9 col-xs-9 user-info">
+                            <h4><a class="status {{ status }}" data-toggle="tooltip"
+                                    title="{{ status|status_text }}"></a> {{ evaluation.teacher }}</h4>
                         </div>
                     </div>
+                    <div class="popover-footer">
+                        <a href="#"
+                            onclick="getModalInfo($(this), '{{ evaluation.deliver.delivery.topic.subject.id }}', 'subject'); return false;"
+                            data-url='{% url "chat:profile" evaluation.teacher.email %}'
+                            class="btn btn-default btn-raised pull-left btn-popover-mobile">
+                            {% trans 'See Profile' %}
+                        </a>
+                        <a href="#"
+                            onclick="getModalInfo($(this), '{{ evaluation.deliver.delivery.topic.subject.id }}', 'subject'); return false;"
+                            data-url='{% url "chat:talk" evaluation.teacher.email %}'
+                            class="btn btn-success btn-raised pull-right btn-popover-mobile">
+                            {% trans 'Send Message' %}
+                        </a>
+                    </div>
+                </div>
                 {% else %}
-                    {{ evaluation.teacher.fullname }} <small class="text-muted" style="margin-left:1em"><i class="fa fa-check-square-o"></i> {% trans 'Evaluated' %}</small>
+                {{ evaluation.teacher.fullname }} <small class="text-muted" style="margin-left:1em"><i
+                        class="fa fa-check-square-o"></i> {% trans 'Evaluated' %}</small>
                 {% endif %}
             </h4>
             <p class="text-muted"><i class="fa fa-clock-o"></i> {% trans 'At' %} {{ evaluation.evaluation_date|date:'SHORT_DATETIME_FORMAT' }} {% if evaluation.is_updated %}({% trans 'Updated' %}){% endif %}</p>
-            
+
             <p><b>{% trans 'Grade' %}:</b> {{ evaluation.evaluation }}</p>
-            
+
             {{ evaluation.commentary|safe }}
-            
+
             {% if evaluation.file %}
-                <a href="{{ evaluation.file.url }}" download><i class="fa fa-download"></i> {{ evaluation.filename }}</a>
+            <a href="{{ evaluation.file.url }}" download><i class="fa fa-download"></i> {{ evaluation.filename }}</a>
             {% endif %}
         </div>
     </div>
 </div>
 
 {% if has_subject_permissions %}
-    <div id="eval_update_btn" class="text-center">
-        <a href="javascript:updateEval('{% url 'material_delivery:evaluate_update' deliver_pk evaluation.pk %}')"
-            class="btn btn-success btn-raised btn-sm">{% trans 'Updadte evaluation' %}</a>
-    </div>
+<div id="eval_update_btn" class="text-center">
+    <a href="javascript:updateEval('{% url 'material_delivery:evaluate_update' deliver_pk evaluation.pk %}')"
+        class="btn btn-success btn-raised btn-sm">{% trans 'Updadte evaluation' %}</a>
+</div>
 {% endif %}
 
 <script type="text/javascript">
     function updateEval(url) {
-        $('.modal').remove();
-
         $.get(url, function (modal) {
             if (typeof (modal.status) !== "undefined") {
                 alertify.error(modal.message);
             } else {
-                $("#resource-panel").after(modal);
+                $("#modalArea").html(modal);
 
-                $('.modal').modal('show');
+                $('#modalArea .modal').modal('show');
             }
         });
     }
