--- a/webconference/templates/webconference/jitsi.html
+++ b/webconference/templates/webconference/jitsi.html
@@ -38,8 +38,43 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 {% endblock %}
 
 {% block content %}
-<div id="jitsi">
+    {% if webconference.visible %}
+		       <div id="resource-panel" class="panel panel-info topic-panel">
+        	     <div class="panel-heading">
+	   {% elif has_resource_permissions %}
+		       <div id="resource-panel" class="panel panel-info topic-panel-invisible">
+        	     <div class="panel-heading panel-invisible">
+    {% endif %}
+         <div class="row">
+              <div class="col-md-12 category-header">
+                   <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
+                       <span>{{ webconference }}</span>
+                   </h4>
 
+                   <div class="col-md-5 pull-right category-card-items">
+                       {% if has_subject_permissions %}
+                  								<a href="" id="moreResources" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" {% if studentView %}style="display:none"{% endif %}>
+                      									<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+            				      				</a>
+            								      <ul class="dropdown-menu pull-right" aria-labelledby="moreResources">
+                               <li><a href="{% url webconference.update_link topic.slug webconference.slug %}" class="edit"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+                               <li><a href="{% url 'webconferences:get_chart' webconference.slug %}" class="edit"><i class="fa fa-line-chart fa-fw" aria-hidden="true"></i>{% trans 'Reports' %}</a></li>
+                               <li><a href="javascript:delete_resource('{% url webconference.delete_link webconference.slug %}')" class="delete"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>{% trans 'Remove' %}</a></li>
+            								      </ul>
+							                 {% endif %}
+                        <a href="{% url 'mural:resource_view' webconference.slug %}" class="pull-right action_icon" data-toggle="tooltip" data-placement="bottom" title="{% trans 'Resource Mural' %}">
+                           <i class="fa fa-list" aria-hidden="true"></i>
+                           {% resource_mural_number webconference request.user %}
+                        </a>
+                    </div>
+             </div>
+       </div>
+   </div>
+   <div id="{{subject.slug}}" class="panel-collapse in collapse category-panel-content">
+        <div id="jitsi">
+
+        </div>
+   </div>
 </div>
 <script>
 // code to start jitsi api
