--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -27,7 +27,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             }
         };
     </script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="https://cdn.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     
     <!-- jQuery & jQuery UI -->
